# franka-realsense-vlm-grasp

./: .env.example  .gitignore  CMakeLists.txt  README.md  package.xml
config/: camera_calibration.yaml  charuco_board.yaml  fr3_hand_controller.yaml
config/examples/: camera_extrinsic.example.yaml  fixed_home_joints.example.json
launch/: executor.launch.py  fake_grasp.launch.py
scripts/: compute_charuco_external_camera_extrinsic.py  compute_external_camera_extrinsic.py  convert_all_grasp_candidates_to_base.py  detect_aruco_from_saved_frame.py  detect_charuco_from_saved_frame.py  generate_charuco_board.py  graspnet_bridge_node.py  make_execution_grasp.py  manual_click_grasp_points.py  online_click_execute_manual_grasp.py  online_click_execute_manual_grasp_yaw.py  publish_grasp_candidate_tfs.py  record_charuco_tcp_point.py  run_manual_grasp_sequence.sh  save_realsense_frame.py  select_manual_grasp.py  transform_grasp_camera_to_base.py  vlm_select_grasp_from_image.py  webcam_publisher.py
src/: fake_grasp_node.cpp  fake_grasp_pose_publisher.cpp  grasp_executor_node.cpp
